# homepp_robot

./: .gitignore  .gitmodules  README.md
homepp_cartographer/: CMakeLists.txt  package.xml
homepp_cartographer/config/: homepp_2d.lua
homepp_cartographer/launch/: cartographer.launch.py
homepp_doa_follower/: package.xml  setup.cfg  setup.py
homepp_doa_follower/homepp_doa_follower/: doa_follower.py
homepp_follower/: package.xml  setup.cfg  setup.py
homepp_follower/homepp_follower/: yoloFollower.py  yoloTracker.py
homepp_follower/launch/: homepp_follower.launch.py
homepp_sherpa_onnx/: keywords.txt  package.xml  setup.cfg  setup.py  test.py
homepp_sherpa_onnx/homepp_sherpa_onnx/: keywordSpotterFromMic.py  keywordSpotterFromTopic.py  speechRecognition.py  speechRecognitionFromTopic.py
homepp_sherpa_onnx/launch/: homepp_sherpa_onnx.launch.py
homepp_start/: package.xml  setup.cfg  setup.py
homepp_start/homepp_start/: caogao.py  homepp_manager.py
homepp_start/launch/: homepp_start.launch-err.py  homepp_start.launch.py
py_tf2_example/: package.xml  setup.cfg  setup.py
py_tf2_example/py_tf2_example/: py_tf2_node.py
py_tf2_example/test/: test_py_tf2.py
yolov8_ros_tensorrt/: CMakeLists.txt  package.xml
yolov8_ros_tensorrt/include/yolov8_ros_tensorrt/: yolov7.hpp  yolov8.hpp
yolov8_ros_tensorrt/src/: yolov8_ros_tensorrt_node.cpp
yolov8_tensorrt_ros/: CMakeLists.txt  package.xml
yolov8_tensorrt_ros/include/yolov8_tensorrt_ros/: yolov7.hpp  yolov8.hpp
yolov8_tensorrt_ros/src/: yolov8_tensorrt_node.cpp
